manifest/backend.yaml
# backend-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: learner-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ankit200193/learnerreport_backend
          ports:
            - containerPort: 5000
---
# backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  type: NodePort
  
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30001
