manifest/frontend.yaml
# frontend-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: learner-app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ankit200193/learnerreport_frontend
          ports:
            - containerPort: 3000
---
# frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30002
